--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,17 +12,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
+      - name: Install dependencies
+        run: npm i
+
       - name: Lint
-        run: |
-          npm run lint
+        run: npm run lint
 
       - name: Check Types
-        run: |
-          npm run typecheck
+        run: npm run typecheck
 
       - name: Test
-        run: |
-          npm run test:coverage
+        run: npm run test:coverage
 
   # deploy:
   #   runs-on: ubuntu-latest
