--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"build": "tsc",
 		"dev": "node --env-file=.env --env-file=.env.development --env-file=.env.local ./dist/index.js",
-		"start": "node ./dist/index.js",
+		"start": "node --env-file=.env --env-file=.env.production ./dist/index.js",
 		"format": "prettier --write",
 		"lint": "eslint",
 		"test": "vitest",
