--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -64,4 +64,5 @@ jobs:
             docker pull ${{ steps.login-ecr.outputs.registry }}/media-bubbles:${{ github.sha }}
             docker stop media-bubbles-bsky || true
             docker rm media-bubbles-bsky || true
+            MONGODB_PASSWORD=$(aws ssm get-parameter --name "/media-bubbles/prod/mongo/password" --with-decryption --query Parameter.Value --output text)
             docker run -d --name media-bubbles-bsky -e MONGODB_PASSWORD=$MONGODB_PASSWORD ${{ steps.login-ecr.outputs.registry }}/media-bubbles:${{ github.sha }}
