--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
 	"main": "index.js",
 	"scripts": {
 		"build": "tsc",
-		"dev": "node --env-file=.env.development --env-file=.env.local ./dist/index.js",
+		"dev": "node --env-file=.env.development ./dist/index.js",
 		"start": "node --env-file=.env.production ./dist/index.js",
 		"format": "prettier --write",
 		"lint": "eslint",
+		"local": "node --env-file=.env.development --env-file=.env.local ./dist/index.js",
 		"test": "vitest",
 		"test:coverage": "vitest run --coverage",
 		"typecheck": "tsc --noEmit"
